--- a/src/index.css
+++ b/src/index.css
@@ -196,9 +196,9 @@ template {
 }
 
 body {
-  background-color: #0c2033;
-  font-family: "Open Sans", sans-serif;
-  color: #fff;
+  /*background-color: #0c2033;*/
+  font-family: "roboto", sans-serif;
+  color: rgb(0, 0, 0);
   letter-spacing: 0.5px;
   font-size: 16px;
   font-weight: 300;
