--- a/src/index.css
+++ b/src/index.css
@@ -196,7 +196,7 @@ template {
 }
 
 body {
-  /*background-color: #0c2033;*/
+  background-color: #0c2033;
   font-family: "roboto", sans-serif;
   color: rgb(0, 0, 0);
   letter-spacing: 0.5px;
